--- a/CrunchTime/.gitignore
+++ b/CrunchTime/.gitignore
@@ -58,3 +58,10 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+ProjectSettings/TagManager.asset
+
+UserSettings/EditorUserSettings.asset
+
+
+
